# SATySFi-fonts-dejavu

./: .gitignore  Makefile  README.md  Satyristes  doc-fonts-dejavu-ja.saty  doc-fonts-dejavu.saty  doc-fonts-theano-ja.saty  fonts.satysfi-hash  mathfonts.satysfi-hash  satysfi-fonts-dejavu-doc.opam  satysfi-fonts-dejavu.opam  satysfi-fonts-theano-doc.opam  satysfi-fonts-theano.opam
