opam-version: "2.0"
name: "satysfi-fonts-theano-doc"
version: "2.0+satysfi0.0.3+satyrograhos0.0.2"
synopsis: "Document of SATySFi Font Package for Alexey Kryukov's Theano Classical Fonts"
description: """
Document of SATySFi Font Package for Alexey Kryukov's Theano Classical Fonts

This package installs fonts from https://github.com/akryukov/theano.
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "OFL"
homepage: "https://github.com/na4zagin3/SATySFi-fonts-theano"
bug-reports: "https://github.com/na4zagin3/SATySFi-fonts-theano/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-fonts-theano.git"
depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-fonts-theano"
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "fonts-theano-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-theano-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
remove: [
  ["satyrographos" "opam" "uninstall"
   "-name" "fonts-theano-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
